tdf#91122 docx import: fix wrong vertical position of OLE object shape

Change-Id: I34cdae7182631ca2d6e86f94f244e9362fe9dc6b